Rename Shared to Shared.UI and remove sample components

--- a/src/SmartFhirApp.Web/SmartFhirApp.Web.csproj
+++ b/src/SmartFhirApp.Web/SmartFhirApp.Web.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SmartFhirApp.Core\SmartFhirApp.Core.csproj" />
-    <ProjectReference Include="..\SmartFhirApp.Shared\SmartFhirApp.Shared.csproj" />
+    <ProjectReference Include="..\SmartFhirApp.Shared.UI\SmartFhirApp.Shared.csproj" />
   </ItemGroup>
 
 </Project>
